# dian

./: .gitignore
WebUI/: CMakeLists.txt  partitions.csv
WebUI/main/: CMakeLists.txt  blink_example_main.c
audio/: CMakeLists.txt
audio/main/: CMakeLists.txt  audio_main.c
esp-dl-3.2.0/examples/tutorial/how_to_load_test_profile_model/model_in_flash_partition/: partitions.csv
esp-dl-3.2.0/examples/tutorial/how_to_load_test_profile_model/model_in_flash_partition/main/: CMakeLists.txt  app_main.cpp  idf_component.yml
esp-dl-3.2.0/examples/tutorial/how_to_quantize_model/quantize_mobilenetv2/: aaa.py  mnist_model_example.onnx  quantize_onnx_model.py
esp-dl-3.2.0/examples/tutorial/how_to_quantize_model/quantize_mobilenetv2/models/: mnist.espdl  mnist.info  mnist.json
esp-dl-3.2.0/tools/: requirements.txt
iperf/: CMakeLists.txt
iperf/main/: CMakeLists.txt  idf_component.yml  iperf_example_main.c
tusb_hid/: CMakeLists.txt
tusb_hid/main/: CMakeLists.txt  tusb_hid_example_main.c
